# museu_scaffoldo

./: .gitignore  README.md  pyproject.toml
museu_scaffoldo/: main.py
museu_scaffoldo/core/api/v1/: routers.py  schemas.py
museu_scaffoldo/modules/equipamentos/: interfaces.py  repository.py  routers.py  schemas.py  service.py
museu_scaffoldo/modules/equipamentos/marcas/: marcas_e_modelos.py
museu_scaffoldo/modules/users/: deps.py  routers.py  schemas.py
museu_scaffoldo/modules/utils/: date_util.py  text_util.py
museu_scaffoldo/modules/visitas/: routers.py  schemas.py  service.py
tests/: conftest.py  test_app.py
tests/equipamentos/: conftest.py  test_repository_equipamentos.py  test_routers_equipamentos.py  test_service_equipamentos.py
tests/users/: test_routers.py  test_routers_users.py
tests/utils/: json_normalizer.py  time_assertions.py
tests/visitas/: test_routers_visita.py
